--- a/pages/aromaticas.html
+++ b/pages/aromaticas.html
@@ -21,7 +21,6 @@
             <nav class="navbar navbar-expand-lg navbar-light navbar-color">
                 <div class="container-fluid">
                     <a class="navbar-brand" href="../index.html"><img src="../icons/planta.png" alt="" width="36" height="30" class="d-inline-block align-text-top">evergreen</a>
-
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
@@ -37,9 +36,6 @@
                 </div>
             </nav>
         </header>
-        <aside>
-            publicidad
-        </aside>
         <main>
 
             <div class="caja-h1">
@@ -48,7 +44,7 @@
             
             <div class="card1P4 cards">
                 <div class="caja-imgCard1 caja-imgCards">
-                    <img class="imgCard1 imgCards" src="../img/albahaca.png" alt="dato1">
+                    <img class="imgCard1 imgCards" src="../img/albahaca.png" alt="albahaca">
                 </div> 
                 <div class="caja-textoCard1 caja-textoCards">
                     <p class="textoImg">albahaca</p>
@@ -62,7 +58,7 @@
 
             <div class="card2P4 cards">
                 <div class="caja-imgCard2 caja-imgCards">
-                    <img class="imgCard2 imgCards" src="../img/cilantro.png" alt="dato2">
+                    <img class="imgCard2 imgCards" src="../img/cilantro.png" alt="cilantro">
                 </div>
                 <div class="caja-textoCard2 caja-textoCards">  
                     <p class="textoImg">cilantro</p>
@@ -76,7 +72,7 @@
 
             <div class="card3P4 cards">
                 <div class="caja-imgCard3 caja-imgCards">
-                    <img class="imgCard3 imgCards" src="../img/eneldo.png" alt="dato3">
+                    <img class="imgCard3 imgCards" src="../img/eneldo.png" alt="eneldo">
                 </div>
                 <div class="caja-textoCard3 caja-textoCards"> 
                     <p class="textoImg">eneldo</p>
@@ -90,7 +86,7 @@
 
             <div class="card4P4 cards">
                 <div class="caja-imgCard4 caja-imgCards">
-                    <img class="imgCard4 imgCards" src="../img/estragon.png" alt="dato4">
+                    <img class="imgCard4 imgCards" src="../img/estragon.png" alt="estragon">
                 </div>
                 <div class="caja-textoCard4 caja-textoCards">    
                     <p class="textoImg">estragon</p>
@@ -104,7 +100,7 @@
 
             <div class="card5P4 cards">
                 <div class="caja-imgCard5 caja-imgCards">
-                    <img class="imgCard5 imgCards" src="../img/eucalipto.png" alt="dato1">
+                    <img class="imgCard5 imgCards" src="../img/eucalipto.png" alt="eucalipto">
                 </div>    
                 <div class="caja-textoCard5 caja-textoCards">
                     <p class="textoImg">eucalipto</p>
@@ -118,7 +114,7 @@
 
             <div class="card6P4 cards">
                 <div class="caja-imgCard6 caja-imgCards">
-                    <img class="imgCard6 imgCards" src="../img/florDeCera.png" alt="dato2">
+                    <img class="imgCard6 imgCards" src="../img/florDeCera.png" alt="flor de cera>
                 </div>
                 <div class="caja-textoCard6 caja-textoCards">  
                     <p class="textoImg">flor de cera</p>
@@ -132,7 +128,7 @@
 
             <div class="card7P4 cards">
                 <div class="caja-imgCard7 caja-imgCards">
-                    <img class="imgCard7 imgCards" src="../img/hierbaBuena.png" alt="dato3">
+                    <img class="imgCard7 imgCards" src="../img/hierbaBuena.png" alt="hierva buena">
                 </div>
                 <div class="caja-textoCard7 caja-textoCards"> 
                     <p class="textoImg">hierba buena</p>
@@ -146,7 +142,7 @@
 
             <div class="card8P4 cards">
                 <div class="caja-imgCard8 caja-imgCards">
-                    <img class="imgCard8 imgCards" src="../img/laurel.png" alt="dato3">
+                    <img class="imgCard8 imgCards" src="../img/laurel.png" alt="laurel">
                 </div>
                 <div class="caja-textoCard8 caja-textoCards"> 
                     <p class="textoImg">laurel</p>
@@ -160,7 +156,7 @@
 
             <div class="card9P4 cards">
                 <div class="caja-imgCard9 caja-imgCards">
-                    <img class="imgCard9 imgCards" src="../img/lavanda.png" alt="dato3">
+                    <img class="imgCard9 imgCards" src="../img/lavanda.png" alt="lavanda">
                 </div>
                 <div class="caja-textoCard9 caja-textoCards"> 
                     <p class="textoImg">lavanda</p>
@@ -173,7 +169,7 @@
 
             <div class="card10P4 cards">
                 <div class="caja-imgCard10 caja-imgCards">
-                    <img class="imgCard10 imgCards" src="../img/limonero.png" alt="dato1">
+                    <img class="imgCard10 imgCards" src="../img/limonero.png" alt="limonero">
                 </div> 
                 <div class="caja-textoCard10 caja-textoCards">
                     <p class="textoImg">limonero</p>
@@ -187,7 +183,7 @@
 
             <div class="card11P4 cards">
                 <div class="caja-imgCard11 caja-imgCards">
-                    <img class="imgCard11 imgCards" src="../img/menta.png" alt="dato1">
+                    <img class="imgCard11 imgCards" src="../img/menta.png" alt="menta">
                 </div> 
                 <div class="caja-textoCard11 caja-textoCards">
                     <p class="textoImg">menta</p>
@@ -201,7 +197,7 @@
 
             <div class="card12P4 cards">
                 <div class="caja-imgCard12 caja-imgCards">
-                    <img class="imgCard12 imgCards" src="../img/perejil.png" alt="dato2">
+                    <img class="imgCard12 imgCards" src="../img/perejil.png" alt="perejil">
                 </div>
                 <div class="caja-textoCard12 caja-textoCards">  
                     <p class="textoImg">perejil</p>
@@ -215,7 +211,7 @@
 
             <div class="card13P4 cards">
                 <div class="caja-imgCard13 caja-imgCards">
-                    <img class="imgCard13 imgCards" src="../img/romero.png" alt="dato3">
+                    <img class="imgCard13 imgCards" src="../img/romero.png" alt="romero">
                 </div>
                 <div class="caja-textoCard13 caja-textoCards"> 
                     <p class="textoImg">romero</p>
@@ -229,7 +225,7 @@
 
             <div class="card14P4 cards">
                 <div class="caja-imgCard14 caja-imgCards">
-                    <img class="imgCard14 imgCards" src="../img/salvia.png" alt="dato4">
+                    <img class="imgCard14 imgCards" src="../img/salvia.png" alt="salvia">
                 </div>
                 <div class="caja-textoCard14 caja-textoCards">    
                     <p class="textoImg">salvia</p>
@@ -243,7 +239,7 @@
 
             <div class="card15P4 cards">
                 <div class="caja-imgCard15 caja-imgCards">
-                    <img class="imgCard15 imgCards" src="../img/tomillo.png" alt="dato1">
+                    <img class="imgCard15 imgCards" src="../img/tomillo.png" alt="tomillo">
                 </div>    
                 <div class="caja-textoCard15 caja-textoCards">
                     <p class="textoImg">tomillo</p>
@@ -257,7 +253,7 @@
 
             <div class="card16P4 cards">
                 <div class="caja-imgCard16 caja-imgCards">
-                    <img class="imgCard16 imgCards" src="../img/toronjil.png" alt="dato2">
+                    <img class="imgCard16 imgCards" src="../img/toronjil.png" alt="toronjil">
                 </div>
                 <div class="caja-textoCard16 caja-textoCards">  
                     <p class="textoImg">toronjil</p>
@@ -269,13 +265,18 @@
 
 
 
-            <div class="caja-botonP2y3"> <!-- falta javascript para activar esto -->
-                <input class="botonP2y3" type="button" value="ver mas">
+            <div class="caja-boton"> <!-- falta javascript para activar esto -->
+                <input class="boton" type="button" value="ver mas">
             </div>
 
         </main>
         <footer>
-            <p>footer</p>
+            <div class="footer-izquierda">
+                <p>izquierda</p>
+            </div>
+            <div class="footer-derecha">
+                <p>derecha</p>
+            </div>
         </footer>
         </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
