--- a/pages/exterior.html
+++ b/pages/exterior.html
@@ -21,7 +21,6 @@
             <nav class="navbar navbar-expand-lg navbar-light navbar-color">
                 <div class="container-fluid">
                     <a class="navbar-brand" href="../index.html"><img src="../icons/planta.png" alt="" width="36" height="30" class="d-inline-block align-text-top">evergreen</a>
-
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
@@ -37,9 +36,6 @@
                 </div>
             </nav>
         </header>
-        <aside>
-            publicidad
-        </aside>
         <main>
             
             <div class="caja-h1">
@@ -48,7 +44,7 @@
             
             <div class="card1P3 cards">
                 <div class="caja-imgCard1 cardscaja-imgCards">
-                    <img class="imgCard1 imgCards" src="../img/agave.png" alt="dato1">
+                    <img class="imgCard1 imgCards" src="../img/agave.png" alt="agave">
                 </div> 
                 <div class="caja-textoCard1 caja-textoCards">
                     <p class="textoImg">agave</p>
@@ -62,7 +58,7 @@
 
             <div class="card2P3 cards">
                 <div class="caja-imgCard2 cardscaja-imgCards">
-                    <img class="imgCard2 imgCards" src="../img/clematis.png" alt="dato2">
+                    <img class="imgCard2 imgCards" src="../img/clematis.png" alt="clemantis">
                 </div>
                 <div class="caja-textoCard2 caja-textoCards">  
                     <p class="textoImg">clematis</p>
@@ -76,7 +72,7 @@
 
             <div class="card3P3 cards">
                 <div class="caja-imgCard3 cardscaja-imgCards">
-                    <img class="imgCard3 imgCards" src="../img/crisantemo.png" alt="dato3">
+                    <img class="imgCard3 imgCards" src="../img/crisantemo.png" alt="crisantemo">
                 </div>
                 <div class="caja-textoCard3 caja-textoCards"> 
                     <p class="textoImg">crisantemo</p>
@@ -90,7 +86,7 @@
 
             <div class="card4P3 cards">
                 <div class="caja-imgCard4 cardscaja-imgCards">
-                    <img class="imgCard4 imgCards" src="../img/hiedra.png" alt="dato4">
+                    <img class="imgCard4 imgCards" src="../img/hiedra.png" alt="hiedra">
                 </div>
                 <div class="caja-textoCard4 caja-textoCards">    
                     <p class="textoImg">hiedra</p>
@@ -104,7 +100,7 @@
 
             <div class="card5P3 cards">
                 <div class="caja-imgCard5 cardscaja-imgCards">
-                    <img class="imgCard5 imgCards" src="../img/jazmin.png" alt="dato1">
+                    <img class="imgCard5 imgCards" src="../img/jazmin.png" alt="jazmin">
                 </div>    
                 <div class="caja-textoCard5 caja-textoCards">
                     <p class="textoImg">jazmin</p>
@@ -118,7 +114,7 @@
 
             <div class="card6P3 cards">
                 <div class="caja-imgCard6 cardscaja-imgCards">
-                    <img class="imgCard6 imgCards" src="../img/lavanda.png" alt="dato2">
+                    <img class="imgCard6 imgCards" src="../img/lavanda.png" alt="lavanda">
                 </div>
                 <div class="caja-textoCard6 caja-textoCards">  
                     <p class="textoImg">lavanda</p>
@@ -132,7 +128,7 @@
 
             <div class="card7P3 cards">
                 <div class="caja-imgCard7 cardscaja-imgCards">
-                    <img class="imgCard7 imgCards" src="../img/margarita.png" alt="dato3">
+                    <img class="imgCard7 imgCards" src="../img/margarita.png" alt="margarita">
                 </div>
                 <div class="caja-textoCard7 caja-textoCards"> 
                     <p class="textoImg">margarita</p>
@@ -146,7 +142,7 @@
 
             <div class="card8P3 cards">
                 <div class="caja-imgCard8 cardscaja-imgCards">
-                    <img class="imgCard8 imgCards" src="../img/palmito.png" alt="dato3">
+                    <img class="imgCard8 imgCards" src="../img/palmito.png" alt="palmito">
                 </div>
                 <div class="caja-textoCard8 caja-textoCards"> 
                     <p class="textoImg">palmito</p>
@@ -160,7 +156,7 @@
 
             <div class="card9P3 cards">
                 <div class="caja-imgCard9 cardscaja-imgCards">
-                    <img class="imgCard9 imgCards" src="../img/rosal.png" alt="dato3">
+                    <img class="imgCard9 imgCards" src="../img/rosal.png" alt="rosal">
                 </div>
                 <div class="caja-textoCard9 caja-textoCards"> 
                     <p class="textoImg">rosal</p>
@@ -170,13 +166,18 @@
                 <p class="a">Los rosales son arbustos de la familia de las rosáceas, conocidos por sus preciosas y fragantes flores, populares en todo el mundo, y por sus espinas. A pesar de su popularidad, son arbustos de fácil cultivo, que solo necesitan abundante luz natural y un riego abundante durante sus meses de floración, especialmente si queremos ver rosas grandes y bonitas. Son muy adecuados para climas calurosos.</p>
             </div>
 
-            <div class="caja-botonP2y3"> <!-- falta javascript para activar esto -->
-                <input class="botonP2y3" type="button" value="ver mas">
+            <div class="caja-boton"> <!-- falta javascript para activar esto -->
+                <input class="boton" type="button" value="ver mas">
             </div>
 
         </main>
         <footer>
-            <p>footer</p>
+            <div class="footer-izquierda">
+                <p>izquierda</p>
+            </div>
+            <div class="footer-derecha">
+                <p>derecha</p>
+            </div>
         </footer>
         </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
