--- a/pages/interior.html
+++ b/pages/interior.html
@@ -35,9 +35,6 @@
                 </div>
             </nav>
         </header>
-        <aside>
-            publicidad
-        </aside>
         <main>
         
             <div class="caja-h1">
@@ -170,13 +167,18 @@
 
 
 
-            <div class="caja-botonP2y3"> <!-- falta javascript para activar esto -->
-                <input class="botonP2y3" type="button" value="ver mas">
+            <div class="caja-boton"> <!-- falta javascript para activar esto -->
+                <input class="boton" type="button" value="ver mas">
             </div>
 
         </main>
         <footer>
-            <p>footer</p>
+            <div class="footer-izquierda">
+                <p>izquierda</p>
+            </div>
+            <div class="footer-derecha">
+                <p>derecha</p>
+            </div>
         </footer>
         </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
