--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
         <header>
             <nav class="navbar navbar-expand-lg navbar-light navbar-color">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="#"><img src="./icons/planta.png" alt="" width="36" height="30" class="d-inline-block align-text-top">evergreen</a>
-
+                    <a class="navbar-brand" href="index.html"><img src="./icons/planta.png" alt="" width="36" height="30" class="d-inline-block align-text-top">evergreen</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
@@ -36,10 +35,54 @@
                 </div>
             </nav>
         </header>
-        <aside>
-            publicidad
-        </aside>
     <main>
+
+    <div id="carouselExampleCaptions" class="carousel slide carousel-tamaño" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
+            </div>
+        <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="./img/lavandaAromatica.png" class="d-block w-100 img-fluid img-carousel" alt=...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Etiqueta de la primera diapositiva</h5>
+                        <p>Algún contenido placeholder representativo para la primera diapositiva.</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="./img/limonero.png" class="d-block w-100 img-fluid img-carousel" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Etiqueta de la segunda diapositiva</h5>
+                        <p>Algún contenido placeholder representativo para la segunda diapositiva.</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="./img/helecho.png" class="d-block w-100 img-fluid img-carousel" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Etiqueta de la tercera diapositiva</h5>
+                        <p>Algún contenido placeholder representativo para la tercera diapositiva.</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="./img/limonero.png" class="d-block w-100 img-fluid img-carousel" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Etiqueta de la segunda diapositiva</h5>
+                        <p>Algún contenido placeholder representativo para la segunda diapositiva.</p>
+                    </div>
+                </div>
+        </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Anterior</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Siguiente</span>
+            </button>
+    </div>
 
         <div class="caja-h1">
             <h1>Productos para cuidar de tus plantas</h1>
@@ -59,7 +102,7 @@
             <div class="card-body">
                 <h5 class="card-title">Título de la tarjeta</h5>
                 <p class="card-text">Un texto de ejemplo rápido para colocal cerca del título de la tarjeta y componer la mayor parte del contenido de la tarjeta.</p>
-                <a href="#" class="btn btn-primary">Ir a algún lugar</a>
+                <a href="#" class="btn btn-primary">comprar</a>
             </div>
         </div>
 
@@ -68,7 +111,7 @@
             <div class="card-body">
                 <h5 class="card-title">Título de la tarjeta</h5>
                 <p class="card-text">Un texto de ejemplo rápido para colocal cerca del título de la tarjeta y componer la mayor parte del contenido de la tarjeta.</p>
-                <a href="#" class="btn btn-primary">Ir a algún lugar</a>
+                <a href="#" class="btn btn-primary">comprar</a>
             </div>
         </div>
 
@@ -77,53 +120,113 @@
             <div class="card-body">
                 <h5 class="card-title">Título de la tarjeta</h5>
                 <p class="card-text">Un texto de ejemplo rápido para colocal cerca del título de la tarjeta y componer la mayor parte del contenido de la tarjeta.</p>
-                <a href="#" class="btn btn-primary">Ir a algún lugar</a>
+                <a href="#" class="btn btn-primary">comprar</a>
             </div>
         </div>
 
-        <div id="carouselExampleCaptions" class="carousel slide carousel-tamaño" data-bs-ride="carousel">
-            <div class="carousel-indicators">
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-            </div>
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="./img/lavandaAromatica.png" class="d-block w-100 img-fluid img-carousel" alt=...">
-                <div class="carousel-caption d-none d-md-block">
-                    <h5>Etiqueta de la primera diapositiva</h5>
-                    <p>Algún contenido placeholder representativo para la primera diapositiva.</p>
-                </div>
-            </div>
-                <div class="carousel-item">
-                    <img src="./img/limonero.png" class="d-block w-100 img-fluid img-carousel" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                    <h5>Etiqueta de la segunda diapositiva</h5>
-                    <p>Algún contenido placeholder representativo para la segunda diapositiva.</p>
-                </div>
-            </div>
-                <div class="carousel-item">
-                    <img src="./img/helecho.png" class="d-block w-100 img-fluid img-carousel" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                    <h5>Etiqueta de la tercera diapositiva</h5>
-                    <p>Algún contenido placeholder representativo para la tercera diapositiva.</p>
-                </div>
+        <div class="card productos" style="width: 18rem;">
+            <img src="./img/tierra.png" class="card-img-top img-productos" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Título de la tarjeta</h5>
+                <p class="card-text">Un texto de ejemplo rápido para colocal cerca del título de la tarjeta y componer la mayor parte del contenido de la tarjeta.</p>
+                <a href="#" class="btn btn-primary">comprar</a>
             </div>
         </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Anterior</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Siguiente</span>
-            </button>
+
+        <div class="card productos" style="width: 18rem;">
+            <img src="./img/tierra.png" class="card-img-top img-productos" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Título de la tarjeta</h5>
+                <p class="card-text">Un texto de ejemplo rápido para colocal cerca del título de la tarjeta y componer la mayor parte del contenido de la tarjeta.</p>
+                <a href="#" class="btn btn-primary">comprar</a>
+            </div>
+        </div>
+
+        <div class="card productos" style="width: 18rem;">
+            <img src="./img/tierra.png" class="card-img-top img-productos" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Título de la tarjeta</h5>
+                <p class="card-text">Un texto de ejemplo rápido para colocal cerca del título de la tarjeta y componer la mayor parte del contenido de la tarjeta.</p>
+                <a href="#" class="btn btn-primary">comprar</a>
+            </div>
+        </div>
+
+                                                                                
+        <div class="card productos productos-descktop" style="width: 18rem;">
+            <img src="./img/tierra.png" class="card-img-top img-productos" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">tierra abonada</h5>
+                <p class="card-text">Un texto de ejemplo rápido para colocal cerca del título de la tarjeta y componer la mayor parte del contenido de la tarjeta.</p>
+                <a href="#" class="btn btn-primary">comprar</a>
+            </div>
+        </div>
+
+        <div class="card productos productos-descktop" style="width: 18rem;">
+            <img src="./img/tierra.png" class="card-img-top img-productos" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Título de la tarjeta</h5>
+                <p class="card-text">Un texto de ejemplo rápido para colocal cerca del título de la tarjeta y componer la mayor parte del contenido de la tarjeta.</p>
+                <a href="#" class="btn btn-primary">comprar</a>
+            </div>
+        </div>
+
+        <div class="card productos productos-descktop" style="width: 18rem;">
+            <img src="./img/tierra.png" class="card-img-top img-productos" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Título de la tarjeta</h5>
+                <p class="card-text">Un texto de ejemplo rápido para colocal cerca del título de la tarjeta y componer la mayor parte del contenido de la tarjeta.</p>
+                <a href="#" class="btn btn-primary">comprar</a>
+            </div>
+        </div>
+
+        <div class="card productos productos-descktop" style="width: 18rem;">
+            <img src="./img/tierra.png" class="card-img-top img-productos" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Título de la tarjeta</h5>
+                <p class="card-text">Un texto de ejemplo rápido para colocal cerca del título de la tarjeta y componer la mayor parte del contenido de la tarjeta.</p>
+                <a href="#" class="btn btn-primary">comprar</a>
+            </div>
+        </div>
+
+        <div class="card productos productos-descktop" style="width: 18rem;">
+            <img src="./img/tierra.png" class="card-img-top img-productos" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Título de la tarjeta</h5>
+                <p class="card-text">Un texto de ejemplo rápido para colocal cerca del título de la tarjeta y componer la mayor parte del contenido de la tarjeta.</p>
+                <a href="#" class="btn btn-primary">comprar</a>
+            </div>
+        </div>
+
+        <div class="card productos productos-descktop" style="width: 18rem;">
+            <img src="./img/tierra.png" class="card-img-top img-productos" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Título de la tarjeta</h5>
+                <p class="card-text">Un texto de ejemplo rápido para colocal cerca del título de la tarjeta y componer la mayor parte del contenido de la tarjeta.</p>
+                <a href="#" class="btn btn-primary">comprar</a>
+            </div>
+        </div>
+
+        <div class="card productos productos-descktop" style="width: 18rem;">
+            <img src="./img/tierra.png" class="card-img-top img-productos" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Título de la tarjeta</h5>
+                <p class="card-text">Un texto de ejemplo rápido para colocal cerca del título de la tarjeta y componer la mayor parte del contenido de la tarjeta.</p>
+                <a href="#" class="btn btn-primary">comprar</a>
+            </div>
+        </div>
+                                                                                
+
+        <div class="caja-boton"> <!-- falta javascript para activar esto -->
+            <input class="boton" type="button" value="ver mas">
         </div>
 
     </main>
         <footer>
-            <div>
-                <p>footer hola</p>
+            <div class="footer-izquierda">
+                <p>izquierda</p>
+            </div>
+            <div class="footer-derecha">
+                <p>derecha</p>
             </div>
         </footer>
     </div>
