--- a/pages/asesoramiento.html
+++ b/pages/asesoramiento.html
@@ -21,7 +21,6 @@
             <nav class="navbar navbar-expand-lg navbar-light navbar-color">
                 <div class="container-fluid">
                     <a class="navbar-brand" href="#"><img src="../icons/planta.png" alt="" width="36" height="30" class="d-inline-block align-text-top">evergreen</a>
-
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
@@ -49,8 +48,8 @@
             <div class="caja-textarea">
                 <textarea class=" textarea" placeholder="duda o consulta"></textarea>
             </div>
-            <div class="caja-boton">
-                <input class="boton" type="button" value="enviar">
+            <div class="caja-botonP5">
+                <input class="botonP5" type="button" value="enviar">
             </div>
         </form>
     <H3>encontranos acá</H3>
@@ -58,9 +57,14 @@
         class="mapa" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d1469.0696601980715!2d-64.28503587841985!3d-42.57356527956418!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2sar!4v1663456364334!5m2!1ses!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
     </iframe>
 </main>
-        <footer>
-            footer
-        </footer>
+<footer>
+    <div class="footer-izquierda">
+        <p>izquierda</p>
+    </div>
+    <div class="footer-derecha">
+        <p>derecha</p>
+    </div>
+</footer>
         </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
