--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@
             <h1>Productos para cuidar de tus plantas</h1>
         </div>
 
-        <div class="card productos" style="width: 18rem;">
+    <div class="grid-productos">
+        <div class="card productos producto1" style="width: 18rem;">
             <img src="./img/tierra.png" class="card-img-top img-productos" alt="...">
             <div class="card-body">
                 <h5 class="card-title">tierra abonada</h5>
@@ -97,7 +98,7 @@
             </div>
         </div>
 
-        <div class="card productos" style="width: 18rem;">
+        <div class="card productos producto2" style="width: 18rem;">
             <img src="./img/tierra.png" class="card-img-top img-productos" alt="...">
             <div class="card-body">
                 <h5 class="card-title">Título de la tarjeta</h5>
@@ -106,7 +107,7 @@
             </div>
         </div>
 
-        <div class="card productos" style="width: 18rem;">
+        <div class="card productos producto3" style="width: 18rem;">
             <img src="./img/tierra.png" class="card-img-top img-productos" alt="...">
             <div class="card-body">
                 <h5 class="card-title">Título de la tarjeta</h5>
@@ -115,7 +116,7 @@
             </div>
         </div>
 
-        <div class="card productos" style="width: 18rem;">
+        <div class="card productos producto4" style="width: 18rem;">
             <img src="./img/tierra.png" class="card-img-top img-productos" alt="...">
             <div class="card-body">
                 <h5 class="card-title">Título de la tarjeta</h5>
@@ -124,7 +125,7 @@
             </div>
         </div>
 
-        <div class="card productos" style="width: 18rem;">
+        <div class="card productos producto5" style="width: 18rem;">
             <img src="./img/tierra.png" class="card-img-top img-productos" alt="...">
             <div class="card-body">
                 <h5 class="card-title">Título de la tarjeta</h5>
@@ -133,7 +134,7 @@
             </div>
         </div>
 
-        <div class="card productos" style="width: 18rem;">
+        <div class="card productos producto6" style="width: 18rem;">
             <img src="./img/tierra.png" class="card-img-top img-productos" alt="...">
             <div class="card-body">
                 <h5 class="card-title">Título de la tarjeta</h5>
@@ -142,7 +143,7 @@
             </div>
         </div>
 
-        <div class="card productos" style="width: 18rem;">
+        <div class="card productos producto7" style="width: 18rem;">
             <img src="./img/tierra.png" class="card-img-top img-productos" alt="...">
             <div class="card-body">
                 <h5 class="card-title">Título de la tarjeta</h5>
@@ -152,7 +153,7 @@
         </div>
 
                                                                                 
-        <div class="card productos productos-descktop" style="width: 18rem;">
+        <div class="card productos producto8 productos-descktop" style="width: 18rem;">
             <img src="./img/tierra.png" class="card-img-top img-productos" alt="...">
             <div class="card-body">
                 <h5 class="card-title">tierra abonada</h5>
@@ -161,7 +162,7 @@
             </div>
         </div>
 
-        <div class="card productos productos-descktop" style="width: 18rem;">
+        <div class="card productos producto9 productos-descktop" style="width: 18rem;">
             <img src="./img/tierra.png" class="card-img-top img-productos" alt="...">
             <div class="card-body">
                 <h5 class="card-title">Título de la tarjeta</h5>
@@ -170,7 +171,7 @@
             </div>
         </div>
 
-        <div class="card productos productos-descktop" style="width: 18rem;">
+        <div class="card productos producto10 productos-descktop" style="width: 18rem;">
             <img src="./img/tierra.png" class="card-img-top img-productos" alt="...">
             <div class="card-body">
                 <h5 class="card-title">Título de la tarjeta</h5>
@@ -179,7 +180,7 @@
             </div>
         </div>
 
-        <div class="card productos productos-descktop" style="width: 18rem;">
+        <div class="card productos producto11 productos-descktop" style="width: 18rem;">
             <img src="./img/tierra.png" class="card-img-top img-productos" alt="...">
             <div class="card-body">
                 <h5 class="card-title">Título de la tarjeta</h5>
@@ -188,7 +189,7 @@
             </div>
         </div>
 
-        <div class="card productos productos-descktop" style="width: 18rem;">
+        <div class="card productos producto12 productos-descktop" style="width: 18rem;">
             <img src="./img/tierra.png" class="card-img-top img-productos" alt="...">
             <div class="card-body">
                 <h5 class="card-title">Título de la tarjeta</h5>
@@ -197,7 +198,7 @@
             </div>
         </div>
 
-        <div class="card productos productos-descktop" style="width: 18rem;">
+        <div class="card productos producto13 productos-descktop" style="width: 18rem;">
             <img src="./img/tierra.png" class="card-img-top img-productos" alt="...">
             <div class="card-body">
                 <h5 class="card-title">Título de la tarjeta</h5>
@@ -206,7 +207,7 @@
             </div>
         </div>
 
-        <div class="card productos productos-descktop" style="width: 18rem;">
+        <div class="card productos producto14 productos-descktop" style="width: 18rem;">
             <img src="./img/tierra.png" class="card-img-top img-productos" alt="...">
             <div class="card-body">
                 <h5 class="card-title">Título de la tarjeta</h5>
@@ -214,7 +215,16 @@
                 <a href="#" class="btn btn-primary">comprar</a>
             </div>
         </div>
-                                                                                
+
+        <div class="card productos producto15 productos-descktop" style="width: 18rem;">
+            <img src="./img/tierra.png" class="card-img-top img-productos" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Título de la tarjeta</h5>
+                <p class="card-text">Un texto de ejemplo rápido para colocal cerca del título de la tarjeta y componer la mayor parte del contenido de la tarjeta.</p>
+                <a href="#" class="btn btn-primary">comprar</a>
+            </div>
+        </div>
+    </div>                                                                         
 
         <div class="caja-boton"> <!-- falta javascript para activar esto -->
             <input class="boton" type="button" value="ver mas">
