--- a/pages/exterior.html
+++ b/pages/exterior.html
@@ -41,7 +41,9 @@
             <div class="caja-h1">
                 <h1>Plantas para el exterior de tu hogar</h1>
             </div>
-            
+
+    <div class="grid-plantas">
+        <div class="card1 contenedor-cards">
             <div class="card1P3 cards">
                 <div class="caja-imgCard1 cardscaja-imgCards">
                     <img class="imgCard1 imgCards" src="../img/agave.png" alt="agave">
@@ -53,9 +55,11 @@
             <div class="aa">  
                 <p class="a">Su nombre científico es Agave americana, aunque también se le llama Pita o Pitera. Es una crasa originaria de México, muy resistente a la sequía y a los suelos con escasez de nutrientes. Es muy valorada por su particular forma de roseta, tan característica de las agaváceas y llega a alcanzar alturas de hasta 2 metros. En suelo no necesita riego en absoluto, aunque en maceta sí requerirá de algunos ligeros.</p>
             </div> 
+        </div>
 
 
 
+        <div class="card2 contenedor-cards">
             <div class="card2P3 cards">
                 <div class="caja-imgCard2 cardscaja-imgCards">
                     <img class="imgCard2 imgCards" src="../img/clematis.png" alt="clemantis">
@@ -67,9 +71,11 @@
             <div class="aa">  
                 <p class="a">También llamada clemátide, se trata en realidad de todo un género de plantas trepadoras de gran velocidad de crecimiento. Cuenta con una gran cantidad de especies y cultivares y se encuentra de forma natural en casi cualquier región templada del mundo. En el jardín, resiste muy bien los cambios de temperatura y apenas necesita cuidados, siendo la única excepción el hecho de que necesita un considerable nivel de humedad.</p>
             </div>
+        </div>
 
 
 
+        <div class="card3 contenedor-cards">
             <div class="card3P3 cards">
                 <div class="caja-imgCard3 cardscaja-imgCards">
                     <img class="imgCard3 imgCards" src="../img/crisantemo.png" alt="crisantemo">
@@ -81,9 +87,11 @@
             <div class="aa">  
                 <p class="a">Estas preciosas flores originarias de China y popularizadas en Japón son una gran forma de embellecer tu jardín a cambio de muy poco trabajo, especialmente en climas fríos o frescos, aunque no extremos. Lo único que necesitan es abundante luz indirecta para que sus flores se abran, siendo muy vistosas y fragantes. Los crisantemos alcanzan alturas de hasta metro y medio.</p>
             </div>
+        </div>
 
 
 
+        <div class="card4 contenedor-cards">
             <div class="card4P3 cards">
                 <div class="caja-imgCard4 cardscaja-imgCards">
                     <img class="imgCard4 imgCards" src="../img/hiedra.png" alt="hiedra">
@@ -95,9 +103,11 @@
             <div class="aa">  
                 <p class="a">El género Hedera cuenta con 15 especies, siendo la más conocida de ellas la hiedra común o Hedera helix. Se trata de una de las más conocidas plantas trepadoras y también de las más usadas en cobertura de muros y fachadas. Sus únicos cuidados destacables son que algunas de sus especies crecen tanto que es necesario controlarlas y que no tolera bien el sol directo.</p>
             </div>
+        </div>
 
 
 
+        <div class="card5 contenedor-cards">
             <div class="card5P3 cards">
                 <div class="caja-imgCard5 cardscaja-imgCards">
                     <img class="imgCard5 imgCards" src="../img/jazmin.png" alt="jazmin">
@@ -109,9 +119,11 @@
             <div class="aa">  
                 <p class="a">El género Jasminum cuenta con unas 200 especies, todas ellas provenientes de zonas tropicales y subtropicales y son unas de las mejores plantas de exterior fáciles de cuidar. Se trata de plantas trepadoras y arbustos de exterior, con unas flores blancas tan decorativas como fragantes. No es nada exquisito con sus cuidados, siendo su único requisito importante que requiere de abundante luz.</p>
             </div>
+        </div>
 
 
 
+        <div class="card6 contenedor-cards">
             <div class="card6P3 cards">
                 <div class="caja-imgCard6 cardscaja-imgCards">
                     <img class="imgCard6 imgCards" src="../img/lavanda.png" alt="lavanda">
@@ -123,9 +135,11 @@
             <div class="aa">  
                 <p class="a">Una de las plantas aromáticas más populares y apreciadas es la lavanda. Su éxito se debe a sus bonitas espigas florales, de tonos lilas y violetas que pueden verse durante todo el año, y al fresco y agradable aroma de estas, que se usa en todo tipo de productos. Es excepcionalmente resistente, tolerando bien tanto el frío como el calor, y solo necesita una buena cantidad de luz y riegos moderados.</p>
             </div>
+        </div>
 
 
 
+        <div class="card7 contenedor-cards">
             <div class="card7P3 cards">
                 <div class="caja-imgCard7 cardscaja-imgCards">
                     <img class="imgCard7 imgCards" src="../img/margarita.png" alt="margarita">
@@ -137,9 +151,11 @@
             <div class="aa">  
                 <p class="a">Las margaritas son especialmente resistentes cuando buscamos plantas de exterior resistentes al sol. En climas cálidos, estas flores arquetípicas y tan conocidas en todo el mundo no necesitarán apenas de ningún cuidado, siendo necesario solo regarlas de forma moderada en los meses cálidos, ya que en invierno será suficiente con lluvias o riegos esporádicos.</p>
             </div>
+        </div>
 
 
 
+        <div class="card8 contenedor-cards">
             <div class="card8P3 cards">
                 <div class="caja-imgCard8 cardscaja-imgCards">
                     <img class="imgCard8 imgCards" src="../img/palmito.png" alt="palmito">
@@ -151,10 +167,12 @@
             <div class="aa">  
                 <p class="a">Su nombre científico es Chamaerops humilis y se trata de la única palmera silvestre que existe con origen en Europa. Es una planta muy tupida, de porte bajo y con un sistema radicular de gran desarrollo. Es bastante resistente y su altura no supera habitualmente los 3 o 4 metros. Su debilidad son las heladas, que no tolera. Es una de las plantas de exterior que necesitan poca agua más fáciles de cuidar.</p>
             </div>
+        </div>
 
 
 
-            <div class="card9P3 cards">
+        <div class="card9 contenedor-cards">
+            <div class="card9P3 cards>
                 <div class="caja-imgCard9 cardscaja-imgCards">
                     <img class="imgCard9 imgCards" src="../img/rosal.png" alt="rosal">
                 </div>
@@ -165,6 +183,8 @@
             <div class="aa">  
                 <p class="a">Los rosales son arbustos de la familia de las rosáceas, conocidos por sus preciosas y fragantes flores, populares en todo el mundo, y por sus espinas. A pesar de su popularidad, son arbustos de fácil cultivo, que solo necesitan abundante luz natural y un riego abundante durante sus meses de floración, especialmente si queremos ver rosas grandes y bonitas. Son muy adecuados para climas calurosos.</p>
             </div>
+        </div>
+    </div>
 
             <div class="caja-boton"> <!-- falta javascript para activar esto -->
                 <input class="boton" type="button" value="ver mas">
