--- a/pages/aromaticas.html
+++ b/pages/aromaticas.html
@@ -41,7 +41,9 @@
             <div class="caja-h1">
                 <h1>Plantas aromáticas para tu hogar</h1>
             </div>
-            
+
+    <div class="grid-plantas">
+        <div class="card1 contenedor-cards">
             <div class="card1P4 cards">
                 <div class="caja-imgCard1 caja-imgCards">
                     <img class="imgCard1 imgCards" src="../img/albahaca.png" alt="albahaca">
@@ -53,9 +55,11 @@
             <div class="aa">  
                 <p class="a">¡No hay plato de pasta sin albahaca! En la cocina italiana, es una de las imprescindibles entre las plantas para cocinar. Y es que esta especie aporta un sabor y aroma espectacular que hace que platos tan sencillos como la pizza o la pasta, se convierten en un auténtico manjar. También se usa mucho esta aromática en otros platos como salsas, guisos o incluso ensaladas. En cuanto a cuidados, la albahaca necesita semisombra por lo que será mucho más recomendable si la cultivas junto al resto de tus plantas aromáticas de interior. </p>
             </div> 
+        </div>
 
 
 
+        <div class="card2 contenedor-cards">
             <div class="card2P4 cards">
                 <div class="caja-imgCard2 caja-imgCards">
                     <img class="imgCard2 imgCards" src="../img/cilantro.png" alt="cilantro">
@@ -67,9 +71,11 @@
             <div class="aa">  
                 <p class="a">Es una hierba aromática muy parecida al perejil o la albahaca, por lo que requiere de cuidados muy similares. En la cocina, el cilantro es una especie que se usa con mucha frecuencia tanto en guisos, salsas o ensaladas. En Canarias, el cilantro es una de las aromáticas esenciales para hacer una de sus salsas más típicas, el mojo. </p>
             </div>
+        </div>
 
 
 
+        <div class="card3 contenedor-cards">
             <div class="card3P4 cards">
                 <div class="caja-imgCard3 caja-imgCards">
                     <img class="imgCard3 imgCards" src="../img/eneldo.png" alt="eneldo">
@@ -81,9 +87,11 @@
             <div class="aa">  
                 <p class="a">Es una planta medicinal con muchas propiedades beneficiosas para la salud, pero también es uno de nuestros condimentos favoritos. Su cultivo es sencillo, ya que requiere bastante sol y un riego moderado. Además, el eneldo es una de las hierbas aromáticas que mejor combina con los pescados, en concreto con el salmón. Si tienes alguna ocasión especial, tienes que probar el salmón Wellington con eneldo. ¡Y está delicioso!</p>
             </div>
+        </div>
 
 
 
+        <div class="card4 contenedor-cards">
             <div class="card4P4 cards">
                 <div class="caja-imgCard4 caja-imgCards">
                     <img class="imgCard4 imgCards" src="../img/estragon.png" alt="estragon">
@@ -95,9 +103,11 @@
             <div class="aa">  
                 <p class="a">No es una de las plantas aromáticas más conocidas, pero se suele usar bastante en la cocina. El estragón es una planta aromática con un olor bastante fuerte por lo que se usa para aromatizar vinagres, salsas o ensaladas. En cuanto a sus cuidados, el estragón es una planta que no tolera muy bien los climas muy fríos ni la humedad. Requiere de mucha luz y de un buen drenaje.</p>
             </div>
+        </div>
 
 
 
+        <div class="card5 contenedor-cards">
             <div class="card5P4 cards">
                 <div class="caja-imgCard5 caja-imgCards">
                     <img class="imgCard5 imgCards" src="../img/eucalipto.png" alt="eucalipto">
@@ -109,9 +119,11 @@
             <div class="aa">  
                 <p class="a">Pocos piensan en el eucalipto como en una planta de interior, pero realmente es muy fácil de mantener en un rincón luminoso de la casa si evitamos corrientes. Además de hermosas, sus hojas verdeazuladas difunden su inconfundible aroma. No hay que olvidarse de podarlo para que mantenga un cuerpo abundante y no se alargue demasiado. Si lo colocamos en el baño, el vapor potenciará su fragancia.</p>
             </div>
+        </div>
 
 
 
+        <div class="card6 contenedor-cards">
             <div class="card6P4 cards">
                 <div class="caja-imgCard6 caja-imgCards">
                     <img class="imgCard6 imgCards" src="../img/florDeCera.png" alt="flor de cera>
@@ -123,9 +135,11 @@
             <div class="aa">  
                 <p class="a">La flor de cera es una planta trepadora y resistente que se cultiva en interiores, pero también puede estar en el exterior a las sombra. Tienen vistosas hojas verdes y unas pequeñas flores blancas con el centro rojo y aspecto encerado que desprenden un perfume dulce. En invierno se deben regar únicamente una vez cada 15 días y pueden llegar a tolerar temperaturas bastante bajas.</p>
             </div>
+        </div>
 
 
 
+        <div class="card7 contenedor-cards">
             <div class="card7P4 cards">
                 <div class="caja-imgCard7 caja-imgCards">
                     <img class="imgCard7 imgCards" src="../img/hierbaBuena.png" alt="hierva buena">
@@ -137,9 +151,11 @@
             <div class="aa">  
                 <p class="a">Es una de las plantas aromáticas más usadas en la cocina. La hierbabuena tiene un aroma muy similar a la menta, pero algo más suave. En cocina, se suele usar sobre todo en repostería. En cuanto a cuidados, necesita un lugar soleado o semisombra para crecer en perfecto estado.</p>
             </div>
+        </div>
 
 
 
+        <div class="card8 contenedor-cards">
             <div class="card8P4 cards">
                 <div class="caja-imgCard8 caja-imgCards">
                     <img class="imgCard8 imgCards" src="../img/laurel.png" alt="laurel">
@@ -151,9 +167,11 @@
             <div class="aa">  
                 <p class="a">El laurel es una planta aromática muy utilizada en cocina para marinar platos, condimentar guisos o sopas. Se puede usar tanto sus hojas frescas como secas. En cuanto a cuidados, esta planta necesita semisombra para evitar que sus hojas se sequen y un riego moderado. Esta planta aromática está acostumbrada a la sequía por lo que si le añadimos mucha agua, lo más probable es que se estropee.</p>
             </div>
+        </div>
 
 
 
+        <div class="card9 contenedor-cards">
             <div class="card9P4 cards">
                 <div class="caja-imgCard9 caja-imgCards">
                     <img class="imgCard9 imgCards" src="../img/lavanda.png" alt="lavanda">
@@ -165,8 +183,11 @@
             <div class="aa">
                 <p class="a">Será difícil que en septiembre encuentres plantas de con flor, así que hazte con un aromatizador de lavanda. Será ideal para toda la casa y especialmente para el dormitorio. La lavanda combate el bajón postvacacional y además ayuda a regular el sueño.</p>
             </div>
+        </div>
 
 
+
+        <div class="card10 contenedor-cards">
             <div class="card10P4 cards">
                 <div class="caja-imgCard10 caja-imgCards">
                     <img class="imgCard10 imgCards" src="../img/limonero.png" alt="limonero">
@@ -177,10 +198,12 @@
             </div>
             <div class="aa">  
                 <p class="a">Los limoneros y otros árboles de otras plantas cítricas (naranja, lima...) son el mejor modo de refrescar el ambiente de tus habitaciones. A cambio, sólo hay que cuidar de que tengan buena luz (necesita de 8 a 12 horas de luz al día), un sustrato que drene bien y abundante riego. La temperatura no debe bajar de 12°C y deben mantener cierta humedad, por lo que, para mantenerla, es aconsejable colocar los tiestos sobre gravilla</p>
-            </div> 
+            </div>
+        </div>
 
 
 
+        <div class="card11 contenedor-cards">
             <div class="card11P4 cards">
                 <div class="caja-imgCard11 caja-imgCards">
                     <img class="imgCard11 imgCards" src="../img/menta.png" alt="menta">
@@ -191,10 +214,12 @@
             </div>
             <div class="aa">  
                 <p class="a">La menta es una de las plantas aromáticas con más sabor y frescura para añadir a nuestros platos preferidos en la cocina. Ahora esta planta aromática también la puedes tener en casa, deleitándote con su fresco aroma. Eso sí, también requiere de mucha luminosidad y un riego regular, aunque sin encharcarse.</p>
-            </div> 
+            </div>
+        </div>
 
 
 
+        <div class="card12 contenedor-cards">
             <div class="card12P4 cards">
                 <div class="caja-imgCard12 caja-imgCards">
                     <img class="imgCard12 imgCards" src="../img/perejil.png" alt="perejil">
@@ -206,9 +231,11 @@
             <div class="aa">  
                 <p class="a">Junto con la albahaca, esta planta es una de las plantas más utilizadas para cocina, pero también de las más delicadas. Para que aguante mucho más tiempo, lo aconsejable es dejarla en el interior de la casa. Para cultivar perejil, podemos comprarlo ya crecido o con semillas. En cuanto a su cuidado, requiere de semisombra y de tierra húmeda.</p>
             </div>
+        </div>
 
 
 
+        <div class="card13 contenedor-cards">
             <div class="card13P4 cards">
                 <div class="caja-imgCard13 caja-imgCards">
                     <img class="imgCard13 imgCards" src="../img/romero.png" alt="romero">
@@ -220,9 +247,11 @@
             <div class="aa">  
                 <p class="a">Es una planta de exterior aromática muy fácil de cuidar. Aporta mucho sabor a las comidas y además podemos añadirlas tanto dentro como fuera de casa. Lo único que sí requiere esta planta es de mucho sol. Así que, si tienes una buena terraza o balcón al aire libre y con mucha luz, aprovéchalo para plantar un romero.</p>
             </div>
+        </div>
 
 
 
+        <div class="card14 contenedor-cards">
             <div class="card14P4 cards">
                 <div class="caja-imgCard14 caja-imgCards">
                     <img class="imgCard14 imgCards" src="../img/salvia.png" alt="salvia">
@@ -234,9 +263,10 @@
             <div class="aa">  
                 <p class="a">La salvia es una planta aromática de exterior excelente para dar un sabor especial a guisos, salsas y arroces debido a la dulzura que aporta con un toque amargo. También muy valorada entre las plantas medicinales. Aunque se puede cultivar en casa, es recomendable ponerla en el exterior y directamente en el suelo, ya que aguantará más tiempo. En cuanto a cuidados, requiere mucha luz, ambiente seco y riego moderado.</p>
             </div>
+        </div>
 
 
-
+        <div class="card15 contenedor-cards">
             <div class="card15P4 cards">
                 <div class="caja-imgCard15 caja-imgCards">
                     <img class="imgCard15 imgCards" src="../img/tomillo.png" alt="tomillo">
@@ -248,9 +278,11 @@
             <div class="aa">  
                 <p class="a">El tomillo es una planta muy aromática y con muchas propiedades medicinales. Además, es una planta muy resistente sobre todo si la cultivamos en el suelo. Si cultivamos en maceta, es importante que esté bien drenada.</p>
             </div>
+        </div>
 
 
 
+        <div class="card16 contenedor-cards">
             <div class="card16P4 cards">
                 <div class="caja-imgCard16 caja-imgCards">
                     <img class="imgCard16 imgCards" src="../img/toronjil.png" alt="toronjil">
@@ -262,7 +294,8 @@
             <div class="aa">  
                 <p class="a">La melisa es una hierba perenne mediterránea. Crece bien en interiores con luz abundante y su fresco aroma cítrico se difunde mejor si lo dejamos junto a una ventana abierta en los días cálidos. Su té es muy beneficioso para contrarrestar los dolores menstruales y también ayuda a calmar las palpitaciones nerviosas y a espantar los mosquitos.</p>
             </div>
-
+        </div>
+    </div>
 
 
             <div class="caja-boton"> <!-- falta javascript para activar esto -->
