--- a/pages/exterior.html
+++ b/pages/exterior.html
@@ -172,7 +172,7 @@
 
 
         <div class="card9 contenedor-cards">
-            <div class="card9P3 cards>
+            <div class="card9P3 cards">
                 <div class="caja-imgCard9 cardscaja-imgCards">
                     <img class="imgCard9 imgCards" src="../img/rosal.png" alt="rosal">
                 </div>
