--- a/pages/interior.html
+++ b/pages/interior.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../css/styleP2.css">
     <link rel="shortcut icon" href="../icons/planta.png" type="image/x-icon">
     <title>plantas para tu hogar</title>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body>
     <div class="grilla-general">
@@ -42,6 +43,7 @@
             </div>
             
     <div class="grid-plantas">
+    
         <div class="card1 contenedor-cards">
             <div class="card1P2 cards">
                 <div class="caja-imgCard1 caja-imgCards">
@@ -55,6 +57,7 @@
                 <p class="a">Una casa sin un potus es impensable porque es agradecido, ágil y un superviviente. Como sus tallos caen y se arrastran, funciona bien en una cesta colgante o en una estantería alta para que pueda lucir su efecto cascada. Además, el potus también es conocido por su cualidad para purificar el aire y es muy longeva.</p>
             </div> 
         </div>
+
 
 
         <div class="card2 contenedor-cards">
@@ -174,6 +177,7 @@
                 <p class="a">Pertenecen a la familia de las suculentas. Son plantas que acumulan agua para adaptarse al hábitat en el que se desarrollan y transformado sus hojas en espinas para protegerse de los animales hervíboros y prevenir la pérdida de agua que se almacena en el tronco. Necesitan varias horas de luz al día, evitar las corrientes de aire y un riego moderado, que dependerá de la estación del año. En invierno hay que reducirlo casi al máximo, en primaver hacerlo cada 10 o 12 días y en verano aumentar la frecuente y hacerlo cada 4 u 8 días (dependiendo de la climatología de tu zona).</p>
             </div>
         </div>
+
     </div>
 
 
