--- a/pages/asesoramiento.html
+++ b/pages/asesoramiento.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- CSS only bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/styleP5.css">
+    <link rel="stylesheet" href="../css/styleP2.css">
     <link rel="shortcut icon" href="../icons/planta.png" type="image/x-icon">
     <title>plantas para tu hogar</title>
 </head>
@@ -20,13 +20,13 @@
         <header>
             <nav class="navbar navbar-expand-lg navbar-light navbar-color">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="#"><img src="../icons/planta.png" alt="" width="36" height="30" class="d-inline-block align-text-top">evergreen</a>
+                    <a class="navbar-brand" href="../index.html"><img src="../icons/planta.png" alt="" width="36" height="30" class="d-inline-block align-text-top">evergreen</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                         <ul class="navbar-nav">
-                            <li class="nav-item"><a class="nav-link" aria-current="page" href="../index.html">Inicio</a></li>
+                            <li class="nav-item"><a class="nav-link active" aria-current="page" href="../index.html">Inicio</a></li>
                             <li class="nav-item"><a class="nav-link" href="../pages/interior.html">interior</a></li>
                             <li class="nav-item"><a class="nav-link" href="../pages/exterior.html">exterior</a></li>
                             <li class="nav-item"><a class="nav-link" href="../pages/aromaticas.html">aromaticas</a></li>
@@ -36,7 +36,7 @@
                 </div>
             </nav>
         </header>
-    <main>
+    <main class="mainP5">
         <form>
             <h2>formulario de consultas</h2>
             <div class="caja-formulario">
@@ -53,9 +53,9 @@
             </div>
         </form>
     <H3>encontranos acá</H3>
-    <iframe 
-        class="mapa" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d1469.0696601980715!2d-64.28503587841985!3d-42.57356527956418!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2sar!4v1663456364334!5m2!1ses!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
-    </iframe>
+    <!-- <iframe 
+        class="mapa" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d1469.0696601980715!2d-64.28503587841985!3d-42.57356527956418!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2sar!4v1663456364334!5m2!1ses!2sar" width="200" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+    </iframe> -->
 </main>
 <footer>
     <div class="footer-izquierda">
@@ -65,7 +65,7 @@
         <p>derecha</p>
     </div>
 </footer>
-        </div>
+</div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
