--- a/index.html
+++ b/index.html
@@ -90,64 +90,64 @@
 
     <div class="grid-productos">
         <div class="card productos producto1" style="width: 18rem;">
-            <img src="./img/tierra.png" class="card-img-top img-productos" alt="...">
+            <img src="./img/tierra.png" class="card-img-top img-productos" alt="tierra abonada">
             <div class="card-body">
                 <h5 class="card-title">tierra abonada</h5>
-                <p class="card-text">Un texto de ejemplo rápido para colocal cerca del título de la tarjeta y componer la mayor parte del contenido de la tarjeta.</p>
+                <p class="card-text">tierra abonada de alta calidad para que tus plantas se desarrollen de la mejor manera.</p>
                 <a href="#" class="btn btn-primary">comprar</a>
             </div>
         </div>
 
         <div class="card productos producto2" style="width: 18rem;">
-            <img src="./img/tierra.png" class="card-img-top img-productos" alt="...">
+            <img src="./img/semillasCesped.png" class="card-img-top img-productos" alt="semillas de cesped">
             <div class="card-body">
-                <h5 class="card-title">Título de la tarjeta</h5>
-                <p class="card-text">Un texto de ejemplo rápido para colocal cerca del título de la tarjeta y componer la mayor parte del contenido de la tarjeta.</p>
+                <h5 class="card-title">semillas de cesped</h5>
+                <p class="card-text">semilas de cesped de rapido crecimiento</p>
                 <a href="#" class="btn btn-primary">comprar</a>
             </div>
         </div>
 
         <div class="card productos producto3" style="width: 18rem;">
-            <img src="./img/tierra.png" class="card-img-top img-productos" alt="...">
+            <img src="./img/tijerasPoda.png" class="card-img-top img-productos" alt="tijeras de poda">
             <div class="card-body">
-                <h5 class="card-title">Título de la tarjeta</h5>
-                <p class="card-text">Un texto de ejemplo rápido para colocal cerca del título de la tarjeta y componer la mayor parte del contenido de la tarjeta.</p>
+                <h5 class="card-title">tijeras de poda</h5>
+                <p class="card-text">tijeras para podar tus plantas de manera comoda y eficiente.</p>
                 <a href="#" class="btn btn-primary">comprar</a>
             </div>
         </div>
 
         <div class="card productos producto4" style="width: 18rem;">
-            <img src="./img/tierra.png" class="card-img-top img-productos" alt="...">
+            <img src="./img/rociador.png" class="card-img-top img-productos" alt="rociador">
             <div class="card-body">
-                <h5 class="card-title">Título de la tarjeta</h5>
-                <p class="card-text">Un texto de ejemplo rápido para colocal cerca del título de la tarjeta y componer la mayor parte del contenido de la tarjeta.</p>
+                <h5 class="card-title">rociador</h5>
+                <p class="card-text">rociador regulable a presion de aire.</p>
                 <a href="#" class="btn btn-primary">comprar</a>
             </div>
         </div>
 
         <div class="card productos producto5" style="width: 18rem;">
-            <img src="./img/tierra.png" class="card-img-top img-productos" alt="...">
+            <img src="./img/palaJardineria.png" class="card-img-top img-productos" alt="pala de jardineria">
             <div class="card-body">
-                <h5 class="card-title">Título de la tarjeta</h5>
-                <p class="card-text">Un texto de ejemplo rápido para colocal cerca del título de la tarjeta y componer la mayor parte del contenido de la tarjeta.</p>
+                <h5 class="card-title">pala de jardineria</h5>
+                <p class="card-text">pala para tierra con punta.</p>
                 <a href="#" class="btn btn-primary">comprar</a>
             </div>
         </div>
 
         <div class="card productos producto6" style="width: 18rem;">
-            <img src="./img/tierra.png" class="card-img-top img-productos" alt="...">
+            <img src="./img/macetas.png" class="card-img-top img-productos" alt="maceta">
             <div class="card-body">
-                <h5 class="card-title">Título de la tarjeta</h5>
-                <p class="card-text">Un texto de ejemplo rápido para colocal cerca del título de la tarjeta y componer la mayor parte del contenido de la tarjeta.</p>
+                <h5 class="card-title">maceta de 30lts</h5>
+                <p class="card-text">maceta de 30 litros con plato de drenaje</p>
                 <a href="#" class="btn btn-primary">comprar</a>
             </div>
         </div>
 
         <div class="card productos producto7" style="width: 18rem;">
-            <img src="./img/tierra.png" class="card-img-top img-productos" alt="...">
+            <img src="./img/macetasColgante.png" class="card-img-top img-productos" alt="maceta colgante">
             <div class="card-body">
-                <h5 class="card-title">Título de la tarjeta</h5>
-                <p class="card-text">Un texto de ejemplo rápido para colocal cerca del título de la tarjeta y componer la mayor parte del contenido de la tarjeta.</p>
+                <h5 class="card-title">maceta colgante</h5>
+                <p class="card-text">maceta colgante de 7 litros</p>
                 <a href="#" class="btn btn-primary">comprar</a>
             </div>
         </div>
@@ -231,14 +231,18 @@
         </div>
 
     </main>
-        <footer>
-            <div class="footer-izquierda">
-                <p>izquierda</p>
-            </div>
-            <div class="footer-derecha">
-                <p>derecha</p>
-            </div>
-        </footer>
+    <footer>
+        <div class="footer-izquierda">
+            <p class="p-mapa">encontranos acá</p>
+            <iframe 
+                class="mapa" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d1469.0696601980715!2d-64.28503587841985!3d-42.57356527956418!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2sar!4v1663456364334!5m2!1ses!2sar" width="200" height="110" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+            </iframe>
+        </div>
+        <div class="footer-derecha">
+            <p><b>email: </b>brandonleonel12@gmail.com</p>
+            <p><b>celular: </b>1112223334</p>
+        </div>
+    </footer>
     </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
