--- a/pages/aromaticas.html
+++ b/pages/aromaticas.html
@@ -30,7 +30,7 @@
                             <li class="nav-item"><a class="nav-link" href="../pages/interior.html">interior</a></li>
                             <li class="nav-item"><a class="nav-link" href="../pages/exterior.html">exterior</a></li>
                             <li class="nav-item"><a class="nav-link" href="../pages/aromaticas.html">aromaticas</a></li>
-                            <li class="nav-item"><a class="nav-link" href="./pages/asesoramiento.html">asesoramiento</a></li>
+                            <li class="nav-item"><a class="nav-link" href="../pages/asesoramiento.html">asesoramiento</a></li>
                         </ul>
                     </div>
                 </div>
@@ -305,10 +305,14 @@
         </main>
         <footer>
             <div class="footer-izquierda">
-                <p>izquierda</p>
+                <p class="p-mapa">encontranos acá</p>
+                <iframe 
+                    class="mapa" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d1469.0696601980715!2d-64.28503587841985!3d-42.57356527956418!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2sar!4v1663456364334!5m2!1ses!2sar" width="200" height="110" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+                </iframe>
             </div>
             <div class="footer-derecha">
-                <p>derecha</p>
+                <p><b>email: </b>brandonleonel12@gmail.com</p>
+                <p><b>celular: </b>1112223334</p>
             </div>
         </footer>
         </div>
