--- a/index.html
+++ b/index.html
@@ -46,24 +46,24 @@
             </div>
         <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="./img/lavandaAromatica.png" class="d-block w-100 img-fluid img-carousel" alt=...">
+                    <img src="./img/plagaOruga.png" class="d-block w-100 img-fluid img-carousel" alt=...">
                     <div class="carousel-caption d-none d-md-block">
-                        <h5>Etiqueta de la primera diapositiva</h5>
-                        <p>Algún contenido placeholder representativo para la primera diapositiva.</p>
+                        <h5>plagas</h5>
+                        <p>atencion con la plaga de orugas en trigo</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="./img/limonero.png" class="d-block w-100 img-fluid img-carousel" alt="...">
+                    <img src="./img/huertaEnCasa.png" class="d-block w-100 img-fluid img-carousel" alt="...">
                     <div class="carousel-caption d-none d-md-block">
-                        <h5>Etiqueta de la segunda diapositiva</h5>
-                        <p>Algún contenido placeholder representativo para la segunda diapositiva.</p>
+                        <h5>huerta en casa</h5>
+                        <p>todos los beneficios de tener una huerta en el patio de tu casa</p>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <img src="./img/datoCarrousel.png" class="d-block w-100 img-fluid img-carousel" alt="...">
                     <div class="carousel-caption d-none d-md-block">
-                        <h5>Etiqueta de la tercera diapositiva</h5>
-                        <p>Algún contenido placeholder representativo para la tercera diapositiva.</p>
+                        <h5>frutas que podes germinar en tu casa</h5>
+                        <p>algunas de las frutas faciles de germinar y cultivar en tu casa</p>
                     </div>
                 </div>
                 <div class="carousel-item">
