act asess media

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         </div>
 
         <div class="card productos producto4" style="width: 18rem;">
-            <img src="./img/semillasCespedDeportivo.png" class="card-img-top img-productos" alt="rociador">
+            <img src="./img/semillasCespedDeportivo.png" class="card-img-top img-productos" alt="semillas de cesped deportivo">
             <div class="card-body">
                 <h5 class="card-title">semillas cesped deportivo</h5>
                 <p class="card-text">cesped para deportes.</p>
@@ -126,7 +126,7 @@
         </div>
 
         <div class="card productos producto5" style="width: 18rem;">
-            <img src="./img/semillasTrebol.png" class="card-img-top img-productos" alt="pala de jardineria">
+            <img src="./img/semillasTrebol.png" class="card-img-top img-productos" alt="semillas trebol">
             <div class="card-body">
                 <h5 class="card-title">semillas de cesped trebol</h5>
                 <p class="card-text">cesped decorativo en forma de treboles.</p>
@@ -135,7 +135,7 @@
         </div>
 
         <div class="card productos producto6" style="width: 18rem;">
-            <img src="./img/semillasCespedJardin.png" class="card-img-top img-productos" alt="maceta">
+            <img src="./img/semillasCespedJardin.png" class="card-img-top img-productos" alt="semillas cesped de jardin">
             <div class="card-body">
                 <h5 class="card-title">semillas de cesped de jardin</h5>
                 <p class="card-text">semillas de cesped brilloso para el jardin.</p>
@@ -154,7 +154,7 @@
 
                                                                                 
         <div class="card productos producto8 productos-descktop" style="width: 18rem;">
-            <img src="./img/macetaCuadrada.png" class="card-img-top img-productos" alt="...">
+            <img src="./img/macetaCuadrada.png" class="card-img-top img-productos" alt="macetasd caudrada">
             <div class="card-body">
                 <h5 class="card-title">maceta grande cuadrada</h5>
                 <p class="card-text">maceta de 30 litros.</p>
@@ -163,7 +163,7 @@
         </div>
 
         <div class="card productos producto9 productos-descktop" style="width: 18rem;">
-            <img src="./img/macetaDecorada.png" class="card-img-top img-productos" alt="...">
+            <img src="./img/macetaDecorada.png" class="card-img-top img-productos" alt="macetasd de ceramica">
             <div class="card-body">
                 <h5 class="card-title">maceta de jardin</h5>
                 <p class="card-text">maceta grande de ceramica, ideal para tu jardin.</p>
@@ -172,7 +172,7 @@
         </div>
 
         <div class="card productos producto10 productos-descktop" style="width: 18rem;">
-            <img src="./img/palaJardin1.png" class="card-img-top img-productos" alt="...">
+            <img src="./img/palaJardin1.png" class="card-img-top img-productos" alt="pala con mango de plástico">
             <div class="card-body">
                 <h5 class="card-title">pala con mango plástico</h5>
                 <p class="card-text">pala de jardineria con mango plastico muy resistente.</p>
@@ -181,7 +181,7 @@
         </div>
 
         <div class="card productos producto11 productos-descktop" style="width: 18rem;">
-            <img src="./img/palaJardin2.png" class="card-img-top img-productos" alt="...">
+            <img src="./img/palaJardin2.png" class="card-img-top img-productos" alt="pala metálica">
             <div class="card-body">
                 <h5 class="card-title">pala de una sola pieza</h5>
                 <p class="card-text">pala metalica de una sola pieza.</p>
@@ -190,7 +190,7 @@
         </div>
 
         <div class="card productos producto12 productos-descktop" style="width: 18rem;">
-            <img src="./img/sacayuyos.png" class="card-img-top img-productos" alt="...">
+            <img src="./img/sacayuyos.png" class="card-img-top img-productos" alt="vara removedora de yuyos">
             <div class="card-body">
                 <h5 class="card-title">vara sacayuyos</h5>
                 <p class="card-text">vara metalica para remover yuyos.</p>
@@ -199,7 +199,7 @@
         </div>
 
         <div class="card productos producto13 productos-descktop" style="width: 18rem;">
-            <img src="./img/plaguisida.png" class="card-img-top img-productos" alt="...">
+            <img src="./img/plaguisida.png" class="card-img-top img-productos" alt="plaguisida">
             <div class="card-body">
                 <h5 class="card-title">mamboreta confi</h5>
                 <p class="card-text">combate plagas como mosca blanca, cochinillas y pulgones.</p>
@@ -208,7 +208,7 @@
         </div>
 
         <div class="card productos producto14 productos-descktop" style="width: 18rem;">
-            <img src="./img/plaguisida2.png" class="card-img-top img-productos" alt="...">
+            <img src="./img/plaguisida2.png" class="card-img-top img-productos" alt="fungisida">
             <div class="card-body">
                 <h5 class="card-title">mamboreta H</h5>
                 <p class="card-text">combate hongos.</p>
@@ -217,7 +217,7 @@
         </div>
 
         <div class="card productos producto15 productos-descktop" style="width: 18rem;">
-            <img src="./img/portaMacetas.png" class="card-img-top img-productos" alt="...">
+            <img src="./img/portaMacetas.png" class="card-img-top img-productos" alt="porta macetas de madera">
             <div class="card-body">
                 <h5 class="card-title">porta macetas de madera</h5>
                 <p class="card-text">porta macetas alto de madera.</p>
