--- a/pages/exterior.html
+++ b/pages/exterior.html
@@ -45,9 +45,10 @@
             </div>
 
     <div class="grid-plantas">
+        
         <div class="card1 contenedor-cards">
             <div class="card1P3 cards">
-                <div class="caja-imgCard1 cardscaja-imgCards">
+                <div class="caja-imgCard1 caja-imgCards">
                     <img class="imgCard1 imgCards" src="../img/agave.png" alt="agave">
                 </div> 
                 <div class="caja-textoCard1 caja-textoCards">
@@ -60,10 +61,9 @@
         </div>
 
 
-
         <div class="card2 contenedor-cards">
             <div class="card2P3 cards">
-                <div class="caja-imgCard2 cardscaja-imgCards">
+                <div class="caja-imgCard2 caja-imgCards">
                     <img class="imgCard2 imgCards" src="../img/clematis.png" alt="clemantis">
                 </div>
                 <div class="caja-textoCard2 caja-textoCards">  
@@ -79,7 +79,7 @@
 
         <div class="card3 contenedor-cards">
             <div class="card3P3 cards">
-                <div class="caja-imgCard3 cardscaja-imgCards">
+                <div class="caja-imgCard3 caja-imgCards">
                     <img class="imgCard3 imgCards" src="../img/crisantemo.png" alt="crisantemo">
                 </div>
                 <div class="caja-textoCard3 caja-textoCards"> 
@@ -95,7 +95,7 @@
 
         <div class="card4 contenedor-cards">
             <div class="card4P3 cards">
-                <div class="caja-imgCard4 cardscaja-imgCards">
+                <div class="caja-imgCard4 caja-imgCards">
                     <img class="imgCard4 imgCards" src="../img/hiedra.png" alt="hiedra">
                 </div>
                 <div class="caja-textoCard4 caja-textoCards">    
@@ -111,7 +111,7 @@
 
         <div class="card5 contenedor-cards">
             <div class="card5P3 cards">
-                <div class="caja-imgCard5 cardscaja-imgCards">
+                <div class="caja-imgCard5 caja-imgCards">
                     <img class="imgCard5 imgCards" src="../img/jazmin.png" alt="jazmin">
                 </div>    
                 <div class="caja-textoCard5 caja-textoCards">
@@ -127,7 +127,7 @@
 
         <div class="card6 contenedor-cards">
             <div class="card6P3 cards">
-                <div class="caja-imgCard6 cardscaja-imgCards">
+                <div class="caja-imgCard6 caja-imgCards">
                     <img class="imgCard6 imgCards" src="../img/lavanda.png" alt="lavanda">
                 </div>
                 <div class="caja-textoCard6 caja-textoCards">  
@@ -143,7 +143,7 @@
 
         <div class="card7 contenedor-cards">
             <div class="card7P3 cards">
-                <div class="caja-imgCard7 cardscaja-imgCards">
+                <div class="caja-imgCard7 caja-imgCards">
                     <img class="imgCard7 imgCards" src="../img/margarita.png" alt="margarita">
                 </div>
                 <div class="caja-textoCard7 caja-textoCards"> 
@@ -159,7 +159,7 @@
 
         <div class="card8 contenedor-cards">
             <div class="card8P3 cards">
-                <div class="caja-imgCard8 cardscaja-imgCards">
+                <div class="caja-imgCard8 caja-imgCards">
                     <img class="imgCard8 imgCards" src="../img/palmito.png" alt="palmito">
                 </div>
                 <div class="caja-textoCard8 caja-textoCards"> 
@@ -175,7 +175,7 @@
 
         <div class="card9 contenedor-cards">
             <div class="card9P3 cards">
-                <div class="caja-imgCard9 cardscaja-imgCards">
+                <div class="caja-imgCard9 caja-imgCards">
                     <img class="imgCard9 imgCards" src="../img/rosal.png" alt="rosal">
                 </div>
                 <div class="caja-textoCard9 caja-textoCards"> 
